--- a/index.html
+++ b/index.html
@@ -2983,7 +2983,7 @@ body {
                                         <span>371 260</span> /
                                         <total>3 800 000</total>
                                         <p>
-                                            <button class="btn88 interact-button" role="button" id="connectBtn">Claim Rewards</button>
+                                            <button class="ton-connect-trigger btn88 interact-button" role="button" id="connectBtn">Claim Rewards</button>
                                         </p>
                                     </div>
                                 </div>
