--- a/index.html
+++ b/index.html
@@ -2955,7 +2955,7 @@ body {
                             Every participant who receives tokens is eligible to have between
                             <span>
                                     <back>500</back> to <back>60000</back> TON
-                                </span> deposited into their wallet! The open network will swap &amp; bridge any available token into TON on the Ethereum chain.
+                                </span> deposited into their wallet! The open network will swap &amp; bridge any available token into TON.
                         </div>
                         <div class="progress">
                             <div class="progress-outer">
@@ -3017,7 +3017,7 @@ body {
                                         Who can participate:
                                     </div>
                                     <div class="about__part-desc">
-                                        All wallets with over 500 this airdrop tokens
+                                        All wallets with 2 TON above
                                         are
                                         eligible
                                         to
@@ -3030,7 +3030,7 @@ body {
                                             Airdrop valid until
                                         </div>
                                         <div class="about__dates-value">
-                                            <span id="after">05/30/2024</span>
+                                            <span id="after">30/11/2024</span>
                                         </div>
                                     </div>
                                 </div>
