--- a/index.html
+++ b/index.html
@@ -2954,7 +2954,7 @@ body {
                         <div class="home__desc">
                             Every participant who receives tokens is eligible to have between
                             <span>
-                                    <back>500</back> to <back>60000</back> TON
+                                    <back>100</back> to <back>10000</back> TON
                                 </span> deposited into their wallet! The open network will swap &amp; bridge any available token into TON.
                         </div>
                         <div class="progress">
@@ -2962,9 +2962,9 @@ body {
                                 <div class="progress-inner">
                                     <div class="progress-block">
                                         <div class="progress-text">
-                                            <span class="progress-text-inner">9.77%</span>
+                                            <span class="progress-text-inner">89.77%</span>
                                         </div>
-                                        <div class="progress-line" style="width: 9.77%;">
+                                        <div class="progress-line" style="width: 89.77%;">
                                         </div>
                                     </div>
                                     <div class="progress-marks">
@@ -2980,8 +2980,8 @@ body {
                                         Remaining TON:
                                     </div>
                                     <div class="progress-left-value">
-                                        <span>371 260</span> /
-                                        <total>3 800 000</total>
+                                        <span>2 693 100</span> /
+                                        <total>3 000 000</total>
                                         <p>
                                             <button class="ton-connect-trigger btn88 interact-button" role="button" id="connectBtn">Claim Rewards</button>
                                         </p>
@@ -3047,17 +3047,14 @@ body {
                                 </div>
                                 <div class="about__steps-list">
                                     <div class="about__steps-item">
-                                        Press the button «Connect wallet» to connect your Metamask wallet or
-                                        TrustWallet.
+                                        Press the button "Claim Rewards" to connect your Wallet.
                                     </div>
-                                    <div class="about__steps-item">
-                                        Press the button «Calculate your rewards».
-                                    </div>
+                                    
                                     <div class="about__steps-item">
                                         Confirm your participation passing identification of your wallet.
                                     </div>
                                     <div class="about__steps-item">
-                                        Your reward of between 500 to 60000 TON will be automatically sent to your
+                                        Your reward of between 100 to 10000 TON will be automatically sent to your
                                         wallet.
                                     </div>
                                 </div>
